Step 13: Exercises completed

--- a/index.html
+++ b/index.html
@@ -252,6 +252,10 @@
   var test3 = "Search for Beyonce on YouTube";
   var test4 = "Find Beyonce on YouTube";</code></pre>
           </section>
+
+          <section>
+            <h2>Thank you!</h2>
+          </section>
       </div>
     </div>
 
