Fixing Git Repo Link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Regular Expressions in Javascript</h1>
       <p class="subtitle">Emily Rautenberg - UX Engineer, Comcast NBCUniversal</p>
       <p class="subtitle">LibertyJS - Friday, October 25, 2019</p>
-      <p class="subtitle"><a href="https://github.com/erautenberg/regexp.git"  target="_blank">https://github.com/erautenberg/regexp.git</a></p>
+      <p class="subtitle"><a href="https://github.com/erautenberg/libertyJS-regexp"  target="_blank">https://github.com/erautenberg/libertyJS-regexp</a></p>
 
       <h2>RegEx</h2>
       <p>A Regular Expression, or regex, is a pattern that can be used to describe a specific subset of text. RegEx use various special character codes to denote sets of characters and shortcuts to generate a searchable pattern. This tutorial will specifically cover how to utilize regular expressions in JavaScript.</p>
