--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p class="subtitle"><a href="https://github.com/erautenberg/libertyJS-regexp"  target="_blank">https://github.com/erautenberg/libertyJS-regexp</a></p>
 
       <h2>RegEx</h2>
-      <p>A Regular Expression, or regex, is a pattern that can be used to describe a specific subset of text. RegEx use various special character codes to denote sets of characters and shortcuts to generate a searchable pattern. This tutorial will specifically cover how to utilize regular expressions in JavaScript.</p>
+      <p>A Regular Expression, or RegEx, is a pattern that can be used to describe a specific subset of text. Regular expressions use various special character codes to denote sets of characters and shortcuts to generate a searchable pattern. This tutorial will specifically cover how to utilize regular expressions in JavaScript.</p>
 
       <div class="content">
           <section>
