--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Regular Expressions in Javascript</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atelier-lakeside-light.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/monokai.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
   </head>
 
@@ -111,7 +111,7 @@
 
           <section>
               <h2>Character Sets</h2>
-              <p>There are many different character codes that can be used as shorthands for groupings of characters</p>
+              <p>There are many different character codes that can be used as shorthands for groupings of characters.</p>
               <pre><code class="javascript">  \d // any digit character (0-9)
   \w // any alphanumeric character (a-z, A-Z, 0-9, and some symbols)
   \s // any whitespace character (space, tab, etc.)
