--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Regular Expressions in Javascript</title>
+    <title>Demystifying Regular Expressions</title>
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/monokai.min.css">
@@ -11,7 +11,7 @@
 
   <body>
     <div>
-      <h1>Regular Expressions in Javascript</h1>
+      <h1>Demystifying Regular Expressions</h1>
       <p class="subtitle">Emily Rautenberg - UX Engineer, Comcast NBCUniversal</p>
       <p class="subtitle">LibertyJS - Friday, October 25, 2019</p>
       <p class="subtitle"><a href="https://github.com/erautenberg/libertyJS-regexp"  target="_blank">https://github.com/erautenberg/libertyJS-regexp</a></p>
