--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <section>
           <h2>Sets and Ranges</h2>
-          <p>It's also possible to query from a set of characters</p>
+          <p>It's also possible to query from a set of characters.</p>
           <pre><code class="javascript" id="sets-set"></code></pre>
           <p>You can also create custom ranges</p>
           <pre><code class="javascript" id="sets-range"></code></pre>
@@ -111,6 +111,7 @@
           <p>As you may have noticed in the previous example, the regular expression found matches for each quanitfier. The results, however, were different for each quanitifier. This is because quantifiers are "greedy." Greedy quantifiers try to match at a given position and go as far forward as they can before the match fails. When it fails, it backtracks one position at a time.</p>
           <p>Consider this "greedy" regular expression against this string.</p>
           <pre><code class="javascript" id="greedy"></code></pre>
+          <p>Let's see what gets highlighted in <a href="https://www.debuggex.com/r/qcaNgVXJjdQ-LCir" target="_blank">Debuggex</a>.</p>
           <p>In order to avoid this behavior, you can make the quantifier "lazy," or tell the expression to repeat the minimal number of times. This means they will try to match only the next position first, and after failing, will backtrack once and then trying matching again</p>
           <pre><code class="javascript" id="lazy"></code></pre>
           <p>Note: There are also "positive lookaheads" and "negative lookaheads" that can be considered, but are outside of the scope of this tutorial. <a href="https://www.regular-expressions.info/lookaround.html" target="_blank">https://www.regular-expressions.info/lookaround.html</a></p>
@@ -123,10 +124,11 @@
           <pre><code class="javascript" id="groups-test"></code></pre>
           <p>Of course, <a href=" https://www.debuggex.com/r/ABnOtr-vYcfptlkW" target="_blank">Debuggex</a> gives you information about these groups.</p>
           <p>If you use the <b>exec</b> function, you can view all of the matching groups where 0 is the entire string, and 1-N are the matching groups.</p>
-          <p>The matches can be referred to as $1, $2, etc. where the number corresponds to the order in which the group matches were found. The entire match can be referenced with <b>$&</b>.</p>
+          <p>The matches can be referred to as $1, $2, etc. where the number corresponds to the order in which the group matches were found. The entire match can be referenced with <b>$</b>.</p>
           <pre><code class="javascript" id="groups-replace"></code></pre>
           <p>Alternatively, you can also create "non-capturing" groups.</p>
           <pre><code class="javascript" id="groups-noncapture"></code></pre>
+          <p>The <a href="https://www.debuggex.com/r/L5bqnfuJLYEWlOoJ" target="_blank">Debuggex</a> diagram illustrates the difference between these really well.</p>
         </section>
 
         <section>
