--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <p class="subtitle">Emily Rautenberg - UX Engineer, Comcast NBCUniversal</p>
       <p class="subtitle">LibertyJS - Friday, October 25, 2019</p>
       <p class="subtitle"><a href="https://github.com/erautenberg/libertyJS-regexp"  target="_blank">https://github.com/erautenberg/libertyJS-regexp</a></p>
+      <img src="./qr_code.png" id="qrcode" />
 
       <h2>RegEx</h2>
       <p>A Regular Expression, or RegEx, is a pattern that can be used to describe a specific subset of text. Regular expressions use various special character codes to denote sets of characters and shortcuts to generate a searchable pattern. This tutorial will specifically cover how to utilize regular expressions in JavaScript.</p>
@@ -128,7 +129,6 @@
           <pre><code class="javascript" id="groups-replace"></code></pre>
           <p>Alternatively, you can also create "non-capturing" groups.</p>
           <pre><code class="javascript" id="groups-noncapture"></code></pre>
-          <p>The <a href="https://www.debuggex.com/r/L5bqnfuJLYEWlOoJ" target="_blank">Debuggex</a> diagram illustrates the difference between these really well.</p>
         </section>
 
         <section>
@@ -137,6 +137,8 @@
           <pre><code class="javascript" id="ors-explanation"></code></pre>
           <p>When used outside of a group, keep in mind the | will compare everything before it and everything after.</p>
           <pre><code class="javascript" id="ors-test"></code></pre>
+          <p>The <a href="https://www.debuggex.com/r/TRr8l0_GYh0LGPmp
+            " target="_blank">Debuggex</a> diagram illustrates the difference between these really well.</p>
         </section>
 
         <section>
